--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-red-contrib-fs-ops",
-  "version": "1.5.1",
+  "name": "node-red-contrib-fs-ops-coco",
+  "version": "1.6.0",
   "description": "A node-red node to perform basic file system operations.",
   "dependencies": {},
   "author": {
@@ -17,12 +17,12 @@
     "copy"
   ],
   "bugs": {
-    "url": "https://github.com/DeanCording/node-red-contrib-fs-ops/issues"
+    "url": "https://github.com/NoFr1ends/node-red-contrib-fs-ops/issues"
   },
-  "homepage": "https://github.com/DeanCording/node-red-contrib-fs-ops",
+  "homepage": "https://github.com/NoFr1ends/node-red-contrib-fs-ops",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DeanCording/node-red-contrib-fs-ops.git"
+    "url": "https://github.com/NoFr1ends/node-red-contrib-fs-ops.git"
   },
   "node-red": {
     "nodes": {
